# silent-rat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
development/: docker-compose.yml  test.env  vimrc
src/: auth.py  config.py  main.py  views.py
src/communication/: __init__.py  communication.py  telegram.py
src/communication/impl/: cli.py  telegram.py
src/exchange/: __init__.py  exchange.py  exchange_message.py
src/exchange/impl/: binance.py
src/strategy/: strategy.py
