[tool.poetry]
name = "silent-rat"
version = "0.0.1"
description = ""
authors = ["Michał Rosiak <michal.rosiak.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
typer = "^0.3.2"
TA-Lib = "^0.4.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
