[tool.poetry]
name = "silent-rat"
version = "0.0.1"
description = ""
authors = ["Michał Rosiak <michal.rosiak.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
TA-Lib = "^0.4.19"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
pydantic = "^1.7.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
